--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop/
-	minecraft_version = 1.20.2
-	yarn_mappings = 4
+	minecraft_version = 1.21.1
+	yarn_mappings = 3
 	tiny_version = 2
-	loader_version = 0.14.24
-	loom_version = 1.4-SNAPSHOT
+	loader_version = 0.16.5
+	loom_version = 1.7-SNAPSHOT
 
 # Mod Properties
 	mod_version = 1.3.0
 	maven_group = com.shnupbups
 	mod_name = quicksand
-	version_meta = fabric-mc1.20.2
+	version_meta = fabric-mc1.21.1
 
 # Modrinth Stuff
 	minotaur_version = 2.+
@@ -25,20 +25,17 @@
 
 # Dependencies
 	# check on https://fabricmc.net/develop/
-	fapi_version=0.90.7+1.20.2
+	fapi_version=0.105.0+1.21.1
 
 	# check on https://maven.shedaniel.me/com/shnupbups/CauldronLib/
-	cauldronlib_version=1.2.2+fabric-mc1.18
-	
-	# check on https://github.com/LlamaLad7/MixinExtras/releases
-	mixinextras_version = 0.2.1-beta.2
+	cauldronlib_version=1.3.0+fabric-mc1.21.1
 
 # Dev Environment Stuff
 	# check on linkie at https://linkie.shedaniel.dev/dependencies?loader=fabric#dep-2
-	rei_version = 13.0.675
+	rei_version = 16.0.783
 
 	# check on linkie at https://linkie.shedaniel.dev/dependencies?loader=fabric#dep-1
-	arch_version = 10.0.8
+	arch_version = 13.0.6
 
 	# check on linkie at https://linkie.shedaniel.dev/dependencies?loader=fabric#dep-3
-	modmenu_version = 8.0.0-beta.2
+	modmenu_version = 11.0.2
