--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop/
-	minecraft_version = 1.21.1
-	yarn_mappings = 3
+	minecraft_version = 1.21.4
+	yarn_mappings = 2
 	tiny_version = 2
 	loader_version = 0.16.5
-	loom_version = 1.7-SNAPSHOT
+	loom_version = 1.9-SNAPSHOT
 
 # Mod Properties
 	mod_version = 1.3.0
 	maven_group = com.shnupbups
 	mod_name = quicksand
-	version_meta = fabric-mc1.21.1
+	version_meta = fabric-mc1.21.4
 
 # Modrinth Stuff
 	minotaur_version = 2.+
@@ -25,17 +25,17 @@
 
 # Dependencies
 	# check on https://fabricmc.net/develop/
-	fapi_version=0.105.0+1.21.1
+	fapi_version=0.112.2+1.21.4
 
 	# check on https://maven.shedaniel.me/com/shnupbups/CauldronLib/
-	cauldronlib_version=1.3.0+fabric-mc1.21.1
+	cauldronlib_version=1.3.0+fabric-mc1.21.4
 
 # Dev Environment Stuff
 	# check on linkie at https://linkie.shedaniel.dev/dependencies?loader=fabric#dep-2
-	rei_version = 16.0.783
+	rei_version = 18.0.796
 
 	# check on linkie at https://linkie.shedaniel.dev/dependencies?loader=fabric#dep-1
-	arch_version = 13.0.6
+	arch_version = 15.0.1
 
 	# check on linkie at https://linkie.shedaniel.dev/dependencies?loader=fabric#dep-3
-	modmenu_version = 11.0.2
+	modmenu_version = 13.0.0-beta.1
